--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>boot_serial</name>
+	<name>TM4CBoot</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -27,7 +27,7 @@
 	<variableList>
 		<variable>
 			<name>ORIGINAL_PROJECT_ROOT</name>
-			<value>$%7BCOM_TI_TIVAWARE_INSTALL_DIR%7D/examples/boards/ek-tm4c1294xl/boot_serial/ccs</value>
+			<value>file:/C:/ti/TivaWare_C_Series-2.2.0.295/examples/boards/ek-tm4c1294xl/boot_serial/ccs</value>
 		</variable>
 		<variable>
 			<name>SW_ROOT</name>
